--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>CIRSUB - GNA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="facebook-domain-verification" content="tosydxpovt9gwfifhdee50xlx42xy3" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link
       rel="stylesheet"
