--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <>
+  <head>
     <meta charset="utf-8">
     <title>CIRSUBGN</title>
     <base href="/">
@@ -8,8 +8,8 @@
     <meta name="facebook-domain-verification" content="tosydxpovt9gwfifhdee50xlx42xy3">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
     <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="icon" type="image/png" sizes="196x196" href="../public/icons/favicon-196.png">
-    <link rel="apple-touch-icon" href="/icons/apple-icon-180.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="/icons/favicon-196.png">
+    <link rel="apple-touch-icon" href="../public/icons/apple-icon-180.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#0ea5e9" />
     <link rel="apple-touch-startup-image" href="/icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
@@ -50,6 +50,7 @@
     <link rel="apple-touch-startup-image" href="/icons/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
     <link rel="apple-touch-startup-image" href="/icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="/icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
+  </head>
   <body>
     <app-root></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
